@@ -1,9 +1,8 @@
 package org.example.flowday.domain.course.course.service;
 
 import lombok.RequiredArgsConstructor;
-import org.example.flowday.domain.course.course.dto.CourseReqDTO;
-import org.example.flowday.domain.course.course.dto.CourseResDTO;
-import org.example.flowday.domain.course.course.dto.PageReqDTO;
+import lombok.extern.log4j.Log4j2;
+import org.example.flowday.domain.course.course.dto.*;
 import org.example.flowday.domain.course.course.entity.Course;
 import org.example.flowday.domain.course.course.entity.Status;
 import org.example.flowday.domain.course.course.exception.CourseException;
@@ -14,10 +13,9 @@ import org.example.flowday.domain.course.spot.entity.Spot;
 import org.example.flowday.domain.course.spot.exception.SpotException;
 import org.example.flowday.domain.course.spot.repository.SpotRepository;
 import org.example.flowday.domain.course.spot.service.SpotService;
-import org.example.flowday.domain.course.wish.dto.WishPlaceResDTO;
+import org.example.flowday.domain.course.wish.dto.WishPlaceListResDTO;
+import org.example.flowday.domain.course.wish.repository.WishPlaceRepository;
 import org.example.flowday.domain.course.wish.service.WishPlaceService;
-import org.example.flowday.domain.member.entity.Member;
-import org.example.flowday.domain.member.exception.MemberException;
 import org.example.flowday.domain.member.repository.MemberRepository;
 import org.example.flowday.global.security.util.SecurityUser;
 import org.springframework.data.domain.Page;
@@ -27,14 +25,16 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
-
 @Service
 @RequiredArgsConstructor
-@Transactional
+@Transactional(readOnly = true)
+@Log4j2
 public class CourseService {
 
     private final MemberRepository memberRepository;
@@ -42,26 +42,28 @@ public class CourseService {
     private final SpotRepository spotRepository;
     private final SpotService spotService;
     private final WishPlaceService wishPlaceService;
+    private final WishPlaceRepository wishPlaceRepository;
 
     // 코스 생성
+    @Transactional
     public CourseResDTO saveCourse(SecurityUser user, CourseReqDTO courseReqDTO) {try {
-            Course course = Course.builder()
-                    .member(user.member())
-                    .title(courseReqDTO.getTitle())
-                    .status(courseReqDTO.getStatus())
-                    .date(courseReqDTO.getDate())
-                    .color(courseReqDTO.getColor())
-                    .spots(null)
-                    .build();
+        Course course = Course.builder()
+                .member(user.member())
+                .title(courseReqDTO.getTitle())
+                .status(courseReqDTO.getStatus())
+                .date(courseReqDTO.getDate())
+                .color(courseReqDTO.getColor())
+                .spots(null)
+                .build();
 
-            courseRepository.save(course);
+        courseRepository.save(course);
 
-            CourseResDTO courseResDTO = new CourseResDTO(course, null);
+        CourseResDTO courseResDTO = new CourseResDTO(course, null);
 
-            return courseResDTO;
-        } catch (Exception e) {
-            throw CourseException.NOT_CREATED.get();
-        }
+        return courseResDTO;
+    } catch (Exception e) {
+        throw CourseException.NOT_CREATED.get();
+    }
     }
 
     // 코스 조회
@@ -78,6 +80,7 @@ public class CourseService {
     }
 
     // 코스 수정 - 정보
+    @Transactional
     public CourseResDTO updateCourseInfo(Long userId, Long courseId, CourseReqDTO courseReqDTO) {
         Course course = courseRepository.findById(courseId).orElseThrow(CourseException.NOT_FOUND::get);
 
@@ -110,6 +113,7 @@ public class CourseService {
     }
 
     // 코스 수정 - 장소 순서 변경
+    @Transactional
     public void updateCourseSpotSequence(Long userId, Long courseId, Long spotId, int sequence) {
         Course course = courseRepository.findById(courseId).orElseThrow(CourseException.NOT_FOUND::get);
 
@@ -135,6 +139,7 @@ public class CourseService {
     }
 
     // 코스에 장소 1개 추가
+    @Transactional
     public void addSpot(Long userId, Long courseId, SpotReqDTO spotReqDTO) {
         Course course = courseRepository.findById(courseId).orElseThrow(CourseException.NOT_FOUND::get);
 
@@ -149,6 +154,7 @@ public class CourseService {
     }
 
     // 코스의 장소 1개 삭제
+    @Transactional
     public void removeSpot(Long userId, Long courseId, Long spotId) {
         Course course = courseRepository.findById(courseId).orElseThrow(CourseException.NOT_FOUND::get);
 
@@ -163,6 +169,7 @@ public class CourseService {
     }
 
     // 코스 삭제
+    @Transactional
     public CourseResDTO removeCourse(Long userId, Long courseId) {
         Course course = courseRepository.findById(courseId).orElseThrow(CourseException.NOT_FOUND::get);
 
@@ -176,53 +183,65 @@ public class CourseService {
     }
 
     // 회원 별 코스 목록 조회
-    public List<CourseResDTO> findCourseByMember(Long userId) {
-        Member member = memberRepository.findById(userId).orElseThrow(MemberException.MEMBER_NOT_FOUND::getMemberTaskException);
-        Long partnerId = member.getPartnerId() != null ? member.getPartnerId() : null;
+    public List<CourseListResDTO> findCourseByMember(SecurityUser user) {
+        Long memberId = user.getId();
+        Long partnerId = user.member().getPartnerId();
 
-        List<Course> memberCourses = courseRepository.findAllByMemberId(userId);
-        List<Course> partnerCourses = partnerId != null
-                ? courseRepository.findAllByMemberIdAndStatus(partnerId, Status.COUPLE)
-                : new ArrayList<>();
+        List<Object[]> results = courseRepository.findAllByMemberIdOrPartnerId(memberId, partnerId, Status.COUPLE);
+        List<CourseListResDTO> courseListResDTOs = new ArrayList<>();
 
-        List<Course> combinedCourses = new ArrayList<>();
-        combinedCourses.addAll(memberCourses);
-        combinedCourses.addAll(partnerCourses);
+        for (Object[] result : results) {
+            Long courseId = (Long) result[0];
+            Long memberIdFromCourse = (Long) result[1];
+            String title = (String) result[2];
+            Status status = (Status) result[3];
+            LocalDate date = (LocalDate) result[4];
+            String color = (String) result[5];
+            String placeIds = (String) result[6];
+            String sequences = (String) result[7];
 
-        List<CourseResDTO> courseResDTOs = combinedCourses.stream()
-                .sorted((a, b) -> b.getCreatedAt().compareTo(a.getCreatedAt()))
-                .map(course -> {
-                    List<Spot> spots = spotRepository.findAllByCourseIdOrderBySequenceAsc(course.getId());
-                    List<SpotResDTO> spotResDTOs = spots.stream()
-                            .map(SpotResDTO::new)
-                            .toList();
+            List<String> spotPlaceIds = (placeIds != null && !placeIds.isEmpty())
+                    ? Arrays.asList(placeIds.split(","))
+                    : new ArrayList<>();
 
-                    return new CourseResDTO(course, spotResDTOs);
-                })
-                .toList();
+            List<Integer> spotSequences = (sequences != null && !sequences.isEmpty())
+                    ? Arrays.asList(sequences.split(",")).stream()
+                    .map(Integer::parseInt)
+                    .collect(Collectors.toList())
+                    : new ArrayList<>();
 
-        return courseResDTOs;
+            List<PlaceIdDTO> spots = new ArrayList<>();
+            for (int i = 0; i < spotPlaceIds.size(); i++) {
+                String placeId = spotPlaceIds.get(i);
+                int sequence = (i < spotSequences.size()) ? spotSequences.get(i) : 0;
+                spots.add(new PlaceIdDTO(placeId, sequence));
+            }
+
+            courseListResDTOs.add(new CourseListResDTO(courseId, memberIdFromCourse, title, status, date, color, spots));
+        }
+        return courseListResDTOs;
     }
 
     // 회원 별 위시 플레이스, 코스 목록 조회
     public Page<Object> findWishPlaceAndCourseListByMember(SecurityUser user, PageReqDTO pageReqDTO) {
         Pageable pageable = pageReqDTO.getPageable(Sort.by(Sort.Direction.DESC, "createdAt"));
 
-        List<WishPlaceResDTO> wishPlaceResDTOS = wishPlaceService.getMemberAndPartnerWishPlaces(user);
-        List<CourseResDTO> courseResDTOS = findCourseByMember(user.getId());
+        List<WishPlaceListResDTO> wishPlaceResDTOS = wishPlaceService.findMemberAndPartnerWishPlaces(user);
+        List<CourseListResDTO> courseResDTOS = findCourseByMember(user);
 
-        List<Object> combinedCourses = new ArrayList<>();
-        combinedCourses.addAll(wishPlaceResDTOS);
-        combinedCourses.addAll(courseResDTOS);
+        List<Object> combinedList = new ArrayList<>();
+        combinedList.addAll(wishPlaceResDTOS);
+        combinedList.addAll(courseResDTOS);
 
         int start = (int) pageable.getOffset();
-        int end = Math.min((start + pageable.getPageSize()), combinedCourses.size());
-        List<Object> paginatedList = combinedCourses.subList(start, end);
+        int end = Math.min((start + pageable.getPageSize()), combinedList.size());
+        List<Object> paginatedList = combinedList.subList(start, end);
 
-        return new PageImpl<>(paginatedList, pageable, combinedCourses.size());
+        return new PageImpl<>(paginatedList, pageable, combinedList.size());
     }
 
     // 그만 보기 시 상대방의 코스 비공개로 상태 변경
+    @Transactional
     public void updateCourseStatusToPrivate(Long userId, Long courseId) {
         Course course = courseRepository.findById(courseId).orElseThrow(CourseException.NOT_FOUND::get);
 
@@ -239,6 +258,7 @@ public class CourseService {
     }
 
     // 연인 관계 해지 시 모든 코스 비공개로 변경
+    @Transactional
     public void updateCourseListStatusToPrivate(Long userId) {
         List<Course> courses = courseRepository.findAllByMemberId(userId);
 
